# Eelie

./: .envrc  .gitignore  CHANGELOG.md  README.md  flake.nix  makefile  meson.build
data/: meson.build  org.codeberg.ARKye03.Eelie.gresource.xml
data/ui/: master.blp
nix/: default.nix  shell.nix
scripts/: genProps.sh
src/: AppButton.cpp  AppButton.hpp  main.cpp  meson.build  window.cpp  window.hpp
src/Modules/: AppButton.cpp  AppButton.hpp  window.cpp  window.hpp
styles/: main.css
