executable(
    project_name,
    project_resources,
    sources: ['main.cpp', 'window.hpp', 'AppButton.cpp', 'AppButton.hpp'],
    dependencies: [
        dependency('gtk4'),
        dependency('gtkmm-4.0'),
        dependency('sigc++-3.0'),
        dependency('gtk4-layer-shell-0'),
    ],
    install: true,
)